# differ

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CPPLINT.cfg  CmakeLists.txt  README.md  coverage.info  makefile  vcpkg-configuration.json  vcpkg.json
asset/: test.diff  test.differ  test.loc  test.var
cmake/: CopyAsset.cmake  Coverage.cmake  Document.cmake  Lint.cmake  MemoryCheck.cmake  Optimize.cmake  Package.cmake
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/c++/: bit.func-c.html  bit.func.html  bit.gcov.html  bitset.func-c.html  bitset.func.html  bitset.gcov.html  (+18 more)
src/: CMakeLists.txt  cmakeLists.txt  main.cpp
src/DifferLexer/: CMakeList.txt  CMakeLists.txt  DifferLexer.cpp
src/DifferParser/: DifferParser.cpp  cmakeLists.txt
src/DifferToken/: CMakeLists.txt  DifferToken.cpp
src/Lexer/: CMakeLists.txt  Lexer.cpp
src/LocationLexer/: CMakeLists.txt  LocationLexer.cpp
src/LocationParser/: CMakeLists.txt  LocationParser.cpp  cmakeLists.txt
src/LocationToken/: CMakeLists.txt  LocationToken.cpp
src/Parser/: CMakeLists.txt  DifferParser.cpp  LocationParser.cpp  Parser.cpp  cmakeLists.txt
src/Token/: CMakeLists.txt  Token.cpp
src/command/: generate.cpp  help.cpp
src/differTemplate/: CMakeLists.txt  differTemplate.cpp
src/generate/: CMakeLists.txt  cmakeLists.txt  generate.cpp
src/help/: CMakeLists.txt  cmakeLists.txt  help.cpp
src/locationTemplate/: CMakeLists.txt  locationTemplate.cpp
src/validate/: CMakeLists.txt  validate.cpp
test/: CMakeLists.txt  CmakeLists.txt
(+235 files in other folders)
